--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,10 +24,10 @@ jobs:
       - run: npm i
       - run: npm run build
         env:
-          NEXT_PUBLIC_BASE_PATH: /yumingchang1991.github.io
+          NEXT_PUBLIC_BASE_PATH: /personal-portfolio
       - run: npm run export
         env:
-          NEXT_PUBLIC_BASE_PATH: /yumingchang1991.github.io
+          NEXT_PUBLIC_BASE_PATH: /personal-portfolio
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4.3.3
