--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://yumingchang1991.github.io/personal-portfolio/",
   "scripts": {
     "dev": "start http://localhost:3000/ && next dev",
     "build": "next build",
